--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -534,9 +534,9 @@ p.error-browser
       </div>
       <div class="row-block">
         <ul class="menu menu_vt Footer-menu">
-          <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
+          <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+          <li class="menu-item"><a class="menu-link" href="/genres">Жанры</a>
           </li>
           <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
           </li>
