--- a/src/main/resources/templates/genres/slug.html
+++ b/src/main/resources/templates/genres/slug.html
@@ -23,11 +23,11 @@
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=65675850">
-  <link rel="stylesheet" href="/assets/css/basic.min.css?v=65675850">
-  <link rel="stylesheet" href="/assets/css/extra.min.css?v=65675850"><!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=56375974">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=56375974">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=56375974"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/assets/js/scripts.min.js?v=65675850"></script>
+  <script defer src="/assets/js/scripts.min.js?v=56375974"></script>
 </head>
 <body class="Site">
   <!--if lt IE 8
@@ -91,52 +91,157 @@
       </div>
     </div>
   </header>
-  <div class="Middle Middle_form">
-    <div class="Middle-top">
-      <div class="wrap">
-        <h1 class="Middle-title">Регистрация
-        </h1>
-      </div>
-    </div>
+  <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
-        <form class="form Login Login_registration" action="#" method="post">
-          <div class="Login-ins">
-            <div class="Login-step">
-              <div class="form-group">
-                <input class="form-input" id="name" name="name" type="text" placeholder="Введите Имя" data-validate="require"/>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item"><a href="/genres/index.html">Жанры</a>
+          </li>
+          <li class="breadcrumbs-item"><a href="/genres/index.html">Легкое чтение</a>
+          </li>
+          <li class="breadcrumbs-item breadcrumbs-item_current"><span>Детективы</span>
+          </li>
+        </ul>
+        <header class="Middle-header">
+          <h1 class="Middle-title">Детективы
+          </h1>
+        </header>
+        <div class="Section">
+          <div class="Cards Cards_refresh">
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
               </div>
-              <div class="form-group form-group_row">
-                <div class="form-group">
-                  <input class="form-input form-input_phone" id="phone" name="phone" type="text" placeholder="Введите телефон" data-mask="+7 (999) 999-99-99" data-validate="require"/>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Техника</a>
+                </strong>
+                <div class="Card-description">Кондратенко Александр Петрович
                 </div>
-                <div class="form-group form-group_key">
-                  <input class="form-input form-input_code" id="phoneCode" name="phoneCode" type="text" placeholder="Код из СМС" data-mask="999 999" data-validate="require key"/>
+                <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
                 </div>
-                <div class="form-group">
-                  <button class="btn btn_success btn_sm form-btn" type="button" name="submitPhone" disabled="disabled" id="submitPhone">Подтвердить
-                  </button>
-                </div>
-              </div>
-              <div class="form-group form-group_row">
-                <div class="form-group">
-                  <input class="form-input form-input_mail" id="mail" name="mail" type="text" placeholder="Введите e-mail" data-validate="mail require"/>
-                </div>
-                <div class="form-group form-group_key">
-                  <input class="form-input form-input_code" id="mailCode" name="mailCode" type="text" placeholder="Код из письма" data-mask="999 999" data-validate="require key"/>
-                </div>
-                <div class="form-group">
-                  <button class="btn btn_success btn_sm form-btn" type="button" name="submitMail" disabled="disabled" id="submitMail">Подтвердить
-                  </button>
-                </div>
-              </div>
-              <div class="form-group form-group_center">
-                <button class="btn btn_primary form-btn" type="button" name="registration" id="registration" disabled="disabled">Зарегистрироваться
-                </button>
               </div>
             </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                <div class="Card-sale">30% скидка
+                </div>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>
+                </strong>
+                <div class="Card-description">Ваулина, Дули, Подоляко
+                </div>
+                <div class="Card-cost"><span class="Card-priceOld">₽250.00</span><span class="Card-price">₽210.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
+                </strong>
+                <div class="Card-description">Быкова, Дули, Эванс
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽190.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                <div class="Card-sale">30% скидка
+                </div>
+                <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
+                </div><a class="Card-status" title="Куплена"><img src="/assets/img/icons/check.svg" alt="check.svg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
+                </strong>
+                <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽50.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
+                </strong>
+                <div class="Card-description">Джон Фарндон
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽900.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="В корзине"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
+                </strong>
+                <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽50.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
+                </div>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
+                </strong>
+                <div class="Card-description">Джон Фарндон
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽900.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
+                </strong>
+                <div class="Card-description">Быкова, Дули, Эванс
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽190.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
+                </strong>
+                <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽50.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="Отложена"><img src="/assets/img/icons/heart.svg" alt="heart.svg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
+                </strong>
+                <div class="Card-description">Джон Фарндон
+                </div>
+                <div class="Card-cost"><span class="Card-price">₽900.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="genre" data-refreshoffset="10" data-refreshlimit="20" data-refreshid="1020">Показать еще</a>
+            </div>
           </div>
-        </form>
+        </div>
       </main>
     </div>
   </div>
