--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,17 @@
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script defer src="/assets/js/scripts.min.js?v=64223515"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="javascript">
+    $(document).ready(function() {
+      $("#locales").change(function () {
+        var selectorOption = $('#locales').val();
+        if (selectorOption !== '') {
+          window.location.replace('?lang' + selectorOption);
+        }
+      });
+    });
+  </script>
 </head>
 <body class="Site">
 <!--if lt IE 8
@@ -50,7 +61,9 @@ p.error-browser
           <div class="Header-search">
             <div class="search">
               <form class="form form_search" action="#" method="post" data-searchlimit="20">
-                <input class="search-input" id="query" name="query" type="text" placeholder="Search over 30 million book titles" value=""/>
+                <input class="search-input" id="query" name="query" type="text"
+                       th:placeholder="${searchPlaceholder}"
+                       placeholder="Search over 30 million book titles" value=""/>
                 <button class="search-button" type="submit" name="search" id="search">Поиск
                 </button>
               </form>
@@ -75,15 +88,15 @@ p.error-browser
     <div class="wrap">
       <nav class="menuModal" id="navigate">
         <ul class="menu menu_main">
-          <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html">Главная</a>
+          <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/main" th:text="#{topbar.main}">Главная</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+          <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:text="#{topbar.genres}">Жанры</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+          <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:text="#{topbar.news}">Новинки</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+          <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:text="#{topbar.popular}">Популярное</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+          <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:text="#{topbar.authors}">Авторы</a>
           </li>
         </ul>
       </nav>
@@ -534,15 +547,15 @@ p.error-browser
       </div>
       <div class="row-block">
         <ul class="menu menu_vt Footer-menu">
-          <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
+          <li class="menu-item"><a class="menu-link" href="/bookshop/main" th:text="#{topbar.main}">Главная</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/genres">Жанры</a>
+          <li class="menu-item"><a class="menu-link" href="/genres" th:text="#{topbar.genres}">Жанры</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+          <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:text="#{topbar.news}">Новинки</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+          <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:text="#{topbar.popular}">Популярное</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="/authors">Авторы</a>
+          <li class="menu-item"><a class="menu-link" href="/authors" th:text="#{topbar.authors}">Авторы</a>
           </li>
         </ul>
       </div>
@@ -557,6 +570,14 @@ p.error-browser
           <li class="menu-item"><a class="menu-link" href="/faq.html">Помощь</a>
           </li>
           <li class="menu-item"><a class="menu-link" href="/contacts.html">Контакты</a>
+          </li>
+          <li class="menu-item">
+            <span>Выбор жанра</span>
+            <select id="locales">
+              <option value=" "></option>
+              <option value="en">English</option>
+              <option value="ru">Русский</option>
+            </select>
           </li>
         </ul>
       </div>
