--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,9 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
+<!--[if gt IE 9]><!-->
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -26,14 +28,13 @@
   <link rel="stylesheet" href="/assets/css/basic.min.css?v=64223515">
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/assets/js/scripts.min.js?v=64223515"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="javascript">
-    $(document).ready(function() {
-      $("#locales").change(function () {
-        var selectorOption = $('#locales').val();
-        if (selectorOption !== '') {
-          window.location.replace('?lang' + selectorOption);
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function (){
+      $("#locales").change(function (){
+        var selectorOption = $("#locales").val();
+        if(selectorOption != ''){
+          window.location.replace('?lang='+selectedOption);
         }
       });
     });
@@ -62,7 +63,7 @@ p.error-browser
             <div class="search">
               <form class="form form_search" action="#" method="post" data-searchlimit="20">
                 <input class="search-input" id="query" name="query" type="text"
-                       th:placeholder="${searchPlaceholder}"
+                       th:placeholder="#{searchbar.placeholder}"
                        placeholder="Search over 30 million book titles" value=""/>
                 <button class="search-button" type="submit" name="search" id="search">Поиск
                 </button>
@@ -112,18 +113,17 @@ p.error-browser
           </h2>
         </div>
         <div class="Slider Slider_carousel">
-          <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
+          <div class="Slider-box Cards">
             <div class="Slider-item" th:each="book : ${bookData}">
               <div class="Slider-content">
                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                   <div class="Card-content">
-                    <strong class="Card-title"><a href="/books/slug.html" th:text="${book.title}">Техника</a>
+                    <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                     </strong>
-                    <!--/*@thymesVar id="author" type=""*/-->
                     <div class="Card-description" th:text="${book.author}">Кондратенко Валерий Петрович
                     </div>
-                    <div class="Card-cost"><!--/*@thymesVar id="priceOld" type=""*/-->
-                      <span class="Card-priceOld"  th:text="${book.priceOld}">₽300.00</span>
+                    <div class="Card-cost">
+                      <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
                       <span class="Card-price" th:text="${book.price}">₽190.00</span>
                     </div>
                   </div>
@@ -600,4 +600,5 @@ p.error-browser
 <!--    +menuItem Это раз-->
 <!--    +menuItem.-item_danger Это два-->
 <!--    +menuItem Это три-->
-</body></html>
+</body>
+</html>
