--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,12 +29,12 @@
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript">
+  <script type="javascript">
     $(document).ready(function (){
       $("#locales").change(function (){
         var selectorOption = $("#locales").val();
         if(selectorOption != ''){
-          window.location.replace('?lang='+selectedOption);
+          window.location.replace('?lang='+selectorOption);
         }
       });
     });
